Make root full height to avoid white cutoff on small pages

--- a/src/scss/base/_normalize.scss
+++ b/src/scss/base/_normalize.scss
@@ -1,6 +1,7 @@
 
 #root {
   background-color: $background;
+  min-height: 100vh;
 }
 
 html {
@@ -14,7 +15,7 @@ body {
 }
 
 a {
-  color: black;
+  color: $color-ui-blue;
 }
 
 h2, h3, h4, h5, a {
